# eventflux

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: linting&testing.yml  python-app.yml
eventflux/: __init__.py  app.py  event.py  filter.py  handler.py  logger.py  router.py
eventflux/subscribers/: base.py  kafka.py
examples/: app.py  send_event.py
tests/: send_event.py  test_app.py  test_filter.py  test_generic_router.py  test_handler.py
tests/unit/: router.py
