[tool.poetry]
name = "eventflux"
version = "0.1.0"
description = ""
authors = ["Amin Jamal <includeamin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
