[tool.poetry]
name = "eventflux"
version = "0.1.0"
description = ""
authors = ["Amin Jamal <includeamin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cloudevents = {extras = ["pydantic"], version = "^1.10.1"}
kafka-python = "^2.0.2"
orjson = "^3.10.3"
structlog = "^24.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
